--- a/style.css
+++ b/style.css
@@ -31,10 +31,12 @@ h2{
 }
 
 main{
-  margin-left: 30px;
-  margin-right: 30px;
   display: flex;
   flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+  
 }
 
 .first{
